<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ble_not_support">当前系统不支持蓝牙</string>
    <!--main tab-->
    <string name="main">主页</string>
    <string name="group">分组</string>
    <string name="device">设备</string>
    <string name="me">我的</string>

    <!--我的-->
    <string name="account_manage">帐号管理</string>
    <string name="family_management">家庭管理</string>
    <string name="setting">设置</string>
    <string name="help_center">帮助中心</string>
    <string name="about">关于</string>

    <!--设备-->
    <string name="all_device">所有设备</string>
    <string name="ungrouped">未分组设备</string>

    <!--登录页面****************-->
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="register_account">请输入注册的账号</string>
    <string name="register_password">请输入注册密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_success">登录成功</string>
    <string name="logon_back">重新登录</string>
    <string name="loading">正在加载数据</string>

    <string name="add_device">添加设备</string>
    <string name="account_no_device">当前帐号没有设备</string>

    <string name="account_exception">账号异常，请重新次登录~！</string>
    <string name="add_exception">添加异常,请稍后重试~!</string>

    <string name="check_add_device">请检查设备是否在线，或添加新的设备~!</string>
    <string name="not_found_device">查找不到新的设备 ~! </string>

    <string name="brightness">亮度</string>
    <string name="colour_temperature">色温</string>
    <string name="colour">颜色</string>


</resources>