<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="jeff.adjust.AdjustActivityDB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:paddingLeft="@dimen/layout_margin"
            android:paddingRight="@dimen/layout_margin">

            <ImageView
                android:id="@+id/top_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/arrow_l" />

            <TextView
                android:id="@+id/top_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="设备设置" />


        </RelativeLayout>

        <RadioGroup
            android:id="@+id/adjust_tabs_RG"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentBottom="true"
            android:background="@color/theme_positive_color"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/adjust_brightness_RB"
                style="@style/Custom.TabRadioButton"
                android:checked="true"
                android:drawableTop="@drawable/tab_model"
                android:text="@string/brightness" />

            <RadioButton
                android:id="@+id/adjust_colourTemperature_RB"
                style="@style/Custom.TabRadioButton"
                android:drawableTop="@drawable/tab_group"
                android:text="@string/colour_temperature" />

            <RadioButton
                android:id="@+id/adjust_colour_RB"
                style="@style/Custom.TabRadioButton"
                android:drawableTop="@drawable/tab_device"
                android:text="@string/colour" />

        </RadioGroup>

        <android.support.v4.view.ViewPager
            android:id="@+id/adjust_VP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tabs_RG" />
    </LinearLayout>
</layout>