<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="jeff.login.LoginActivityDB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height">

            <ImageView
                android:id="@+id/img_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_login_account" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/img_account"
                android:background="@null"
                android:hint="@string/account"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/img_account"
                android:background="@color/orange_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/layout_margin"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_login_pw" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/img_pw"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:id="@+id/iv_see_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_see_pass" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/img_pw"
                android:background="@color/orange_light" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="false"
                android:padding="@dimen/padding"
                android:text="@string/check_password"
                android:textColor="@color/orange_deep"
                android:textSize="@dimen/text_size_small" />

            <CheckBox
                android:id="@+id/checkBox_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="false"
                android:padding="@dimen/padding"
                android:text="@string/check_login"
                android:textColor="@color/orange_deep"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_huge"
            android:background="@drawable/btn_orange_selector"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </LinearLayout>
</layout>
